# hpxmp_meta

./: .gitignore  CMakeLists.txt  README.md  build-examples-hpxmp.sh  build-examples-new.sh  build-examples-omp.sh  build-hpx.sh  build-hpxc.sh  build-hpxmp.sh  build-omp.sh  hello.cpp
.github/workflows/: test.yml  test_windows.yml
cmake/: FindHPXMP.cmake  FindOpenMPCustom.cmake
dependencies/: README.md
hpx_example/: hello.cpp
hpxmp_tests/src/: CMakeLists.txt
hpxmp_tests/src/examples/: CMakeLists.txt  hello.cpp
hpxmp_tests/src/running_examples/: CMakeLists.txt  hello.cpp
hpxmp_tests/src/tests/: CMakeLists.txt
hpxmp_tests/src/tests/regression/: CMakeLists.txt  get_thread_num.cpp  parallel_multi.cpp  task_tree_simple.cpp  task_untied.cpp
hpxmp_tests/src/tests/regressions/: CMakeLists.txt  get_thread_num.cpp  parallel_multi.cpp
hpxmp_tests/src/tests/unit/: CMakeLists.txt  app_lu.cpp  app_old_fib.cpp  app_omp_fib.cpp  app_vla.cpp  atomic.cpp  barrier.cpp  critical.cpp  critical_2.cpp  firstprivate.cpp  for_decrement.cpp  for_dynamic.cpp  for_increment.cpp  for_nowait.cpp  for_reduction.cpp  for_shared.cpp  for_static.cpp  master.cpp  max_threads.cpp  omp_set_get_nested.cpp  par_for.cpp  par_nested.cpp  par_single.cpp  sections.cpp  sections_2.cpp  single_copyprivate.cpp  single_copyprivate_1var.cpp  single_copyprivate_2.cpp  single_nowait.cpp  task_depend.cpp  task_fp.cpp  task_in_reduction.cpp  task_tree.cpp  taskgroup.cpp  taskgroup_.cpp  taskwait.cpp  taskwait_2.cpp  threadprivate.cpp
running_examples/: CMakeLists.txt  app_lu.cpp  app_old_fib.cpp  app_omp_fib.cpp  app_vla.cpp  atomic.cpp  barrier.cpp  critical.cpp  critical_2.cpp  firstprivate.cpp  for.cpp  for_decrement.cpp  for_dynamic.cpp  for_increment.cpp  for_nowait.cpp  for_reduction.cpp  for_shared.cpp  for_static.cpp  hello.cpp  master.cpp  max_threads.cpp  omp_set_get_nested.cpp  par_for.cpp  par_nested.cpp  par_single.cpp  sections.cpp  sections_2.cpp  single_copyprivate.cpp  single_copyprivate_1var.cpp  single_copyprivate_2.cpp  single_nowait.cpp  task_depend.cpp  task_fp.cpp  task_in_reduction.cpp  task_tree.cpp  taskgroup.cpp  taskgroup_.cpp  taskwait.cpp  taskwait_2.cpp  threadprivate.cpp
scripts/: build-all.sh  build-examples-hpxmp.sh  build-examples-omp.sh  build-hpx.sh  build-hpxc.sh  build-hpxmp.sh  build-lulesh-gomp.sh  build-lulesh-hpxmp.sh  build-lulesh-omp.sh  build-omp.sh  build-tests-hpxmp.sh  env-hpx.sh  env-omp.sh  env.sh
src/: CMakeLists.txt
src/tests/regression/: CMakeLists.txt  get_thread_num.cpp  parallel_multi.cpp  task_tree_simple.cpp  task_untied.cpp
src/tests/unit/: app_lu.cpp  app_omp_fib.cpp  app_vla.cpp  atomic.cpp  barrier.cpp  for_decrement.cpp  for_nowait.cpp  for_static.cpp  master.cpp  par_for.cpp  par_single.cpp  sections_2.cpp  single_copyprivate_2.cpp  taskgroup_.cpp  threadprivate.cpp
